--- a/assets_dev/localizations/localizations.csv
+++ b/assets_dev/localizations/localizations.csv
@@ -1,4 +1,4 @@
 keys;en;de
 appTitle;My awesome application;Meine tolle App
 onboardingWelcomeHeadline;Welcome to Freebox;Welcome to Freebox
-onboardingPageOneDescription;In this app you can upload the content of your freebox for free and share it with others!;'In this app you can upload the content of your freebox for free ans share it with others!'
+onboardingPageOneDescription;In this app you can upload the content of your freebox and share it with others!;'In this app you can upload the content of your freebox for free ans share it with others!'
