--- a/assets_dev/localizations/localizations.csv
+++ b/assets_dev/localizations/localizations.csv
@@ -6,3 +6,4 @@ onboardingPageTwoDescription;You can also search for freebox locations close to 
 onboardingPageTwoButtonLabel;Get Started!;Los geht's!
 bottomNavigationBarFreeboxes;Freeboxes;Freeboxes
 bottomNavigationBarMap;Map;Karte
+addFreeboxSheetUploadFreeboxButtonLabel;Upload Freebox;Freebox hochladen
